--- a/packages/examples/index.html
+++ b/packages/examples/index.html
@@ -13,6 +13,12 @@
   <div class="wrapper">
     <h1>Solid Habitat</h1>
 
+    <h2>Counter</h2>
+    <pre
+      class="code"><code>&lt;div data-component=&quot;Counter&quot; class=&quot;preview&quot; data-prop-n-initial-count=&quot;1&quot;&gt;&lt;/div&gt;&#10;&lt;!-- path: src/components/Counter.tsx --&gt;</code></pre>
+    <div data-component="Counter" class="preview" data-prop-n-initial-count="8"></div>
+    <!-- path: src/components/Counter.tsx -->
+
     <h2>Call to Action</h2>
     <pre
       class="code"><code>&lt;div data-component=&quot;call-to-action&quot; class=&quot;preview&quot;&gt;&lt;/div&gt;&#10;&lt;!-- path: src/components/call-to-action/call-to-action.tsx --&gt;</code></pre>
@@ -31,11 +37,16 @@
         }
       </script>
     </div>
+    <pre
+      class="code"><code>&lt;div data-component=&quot;email-subscribe&quot; class=&quot;preview&quot; data-prop-b-show-name=&quot;true&quot; data-prop-b-show-email=&quot;false&quot;&gt;&lt;/div&gt;&#10;&lt;!-- path: src/components/email-subscribe/index.tsx --&gt;</code></pre>
+    <div data-component="email-subscribe" class="preview" data-prop-b-show-name="true" data-prop-b-show-email="false">
+    </div>
+    <!-- path: src/components/email-subscribe/index.tsx -->
 
     <h2>Pokemon</h2>
     <pre
-      class="code"><code>&lt;div data-component=&quot;Pokemon&quot; class=&quot;preview&quot; data-pokemon-id=&quot;1&quot;&gt;&lt;/div&gt;&#10;&lt;!-- path: src/components/pokemon/Pokemon.tsx --&gt;</code></pre>
-    <div data-component="Pokemon" class="preview" data-pokemon-id="1"></div>
+      class="code"><code>&lt;div data-component=&quot;Pokemon&quot; class=&quot;preview&quot; data-prop-pokemon-id=&quot;1&quot;&gt;&lt;/div&gt;&#10;&lt;!-- path: src/components/pokemon/Pokemon.tsx --&gt;</code></pre>
+    <div data-component="Pokemon" class="preview" data-prop-pokemon-id="1"></div>
     <!-- path: src/components/pokemon/Pokemon.tsx -->
     <pre
       class="code"><code>&lt;div data-component=&quot;Pokemon&quot; class=&quot;preview&quot;&gt;&#10;  &lt;!-- path: src/components/pokemon/Pokemon.tsx --&gt;&#10;  &lt;script type=&quot;text/props&quot;&gt;&#10;    { &quot;pokemonId&quot;: &quot;4&quot; }&#10;  &lt;/script&gt;&#10;&lt;/div&gt;</code></pre>
@@ -53,6 +64,13 @@
           { "pokemonId": "7" }
         </script>
     </div>
+
+    <h2>Specific components</h2>
+    <div>i.e. not using <code>import.meta.glob</code></div>
+    <pre
+      class="code"><code>&lt;div data-component=&quot;App&quot; class=&quot;preview&quot;&lt;/div&gt;&#10;&lt;!-- path: src/App.tsx --&gt;</code></pre>
+    <div data-component="App" class="preview"></div>
+    <!-- path: src/App.tsx -->
   </div>
   <script src="/src/index.tsx" type="module"></script>
 </body>
